Bug 347685 - Transaction contains erroneous *** UNASSIGNED *** in Tags view if no payee is given
Summary: Transaction contains erroneous *** UNASSIGNED *** in Tags view if no payee is...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-13 20:32 UTC by Christian David
Modified: 2019-01-09 19:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments
Screenshot with the error (72.90 KB, image/png)
2015-05-17 17:55 UTC, Christian David
Details
How I created the transaction (12.03 KB, image/png)
2015-05-17 17:56 UTC, Christian David
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian David 2015-05-13 20:32:58 UTC
Transactions without payee but a tag are shown incorrectly in the tags view.

Reproducible: Always

Steps to Reproduce:
1. Create transaction with tag but no payee
2. Go to Tags, select the tag
3. Highlight the transaction

Actual Results:  
First row shows category
second row *** UNASSIGNED ***

Expected Results:  
No *** UNASSIGNED ***, maybe there should not be second line.
Comment 1 Thomas Baumgart 2015-05-16 16:21:54 UTC
I tried hard to duplicate this in master but to no avail. Can you provide screen shots and/or a sample file?
Comment 2 Jack 2015-05-16 20:39:25 UTC
I can reproduce this with Version 4.7.90-826bb6aa03 (from the end of February) which is the latest version I have compiled.
Comment 3 Thomas Baumgart 2015-05-17 06:14:20 UTC
Thanks, can you also tell me what you do to reproduce it? Thanks. 

@Jack: that version btw. dates back into November 2014, so you must not have run cmake after that time. See http://quickgit.kde.org/?p=kmymoney.git&a=commit&h=826bb6aa03a4dfdb0efd4478ac272fbf7562067d
Comment 4 Jack 2015-05-17 15:42:31 UTC
That's strange.  My actual git head is at 3ddd280b4d93cb15de437837be46add19b69bba1 from 27 Feb 2015.  I always run ccmake after updating and before compiling - does that not do the same as cmake?  (your link to quickgit is for something apparently unrelated, but I do remember the issue of needing an extra step to get the about version updated)

To reproduce, it's just as in the original report.  Create a transaction with a tag and a category, but no payee.  Select the Tags view and select the tag you put on that transaction.  In the list at the right, it shows *** UNASSIGNED ***.

I'm going to update to git master and try again - hopefully by later today.
Comment 5 Christian David 2015-05-17 17:55:40 UTC
Created attachment 92661 [details]
Screenshot with the error

Here is a screenshot of the issue, build with d4065b9.
Comment 6 Christian David 2015-05-17 17:56:32 UTC
Created attachment 92662 [details]
How I created the transaction

"Spenden" is the category.
Comment 7 Jack 2015-05-17 18:31:49 UTC
I reran ccmake and recompiled.  Now the about dialog shows the correct (27 Feb) update, but I cannot recreate the problem.  It's the same version I was running earlier, as far as I can tell by all the file dates, so I had not updated the source.  However, various utilities on my system have certainly been updated, although I can't think why that would be relevant.

Also,  I've now updated to the latest source from git, but the about dialog is still showing the 27 Feb commit.  I've tried both 'ccmake .' and 'ccmake ../source' from my out of source build directory.  I didn't think a make clean was necessary, but if I don't find the exact command to use, I'll have to try that next.
Comment 8 Jack 2015-05-17 18:50:00 UTC
I finally got git head compiled and properly showing in the about dialog.  I can no longer reproduce the problem.  I'm using git master.  I suspect my about dialog issues are related to installing in a non-standard location for testing git head and keeping it separate from my main distro installed version.  I had to do an explicit uninstall and then reinstall for the update commit to be displayed.  However, I don't think that is relevant to the actual topic of this bug.
Comment 9 Thomas Baumgart 2019-01-09 19:16:25 UTC
Git commit 97e3186babf1d4426f5fbd2cd9c9a6da459ea37d by Thomas Baumgart.
Committed on 03/01/2019 at 16:34.
Pushed by tbaumgart into branch '5.0'.

Fix transaction register display in tags view

In case a transaction had a tag assigned, an amount differing from zero,
a category assigned but no payee, the register in the tags view showed
wrong results. This fixes the behavior so that the memo is shown instead
of the erroneous text "*** UNASSIGNED ***"
FIXED-IN: 5.0.3

M  +8    -5    kmymoney/widgets/stdtransaction.cpp

https://commits.kde.org/kmymoney/97e3186babf1d4426f5fbd2cd9c9a6da459ea37d