Fix transaction register display in tags view

In case a transaction had a tag assigned, an amount differing from zero,
a category assigned but no payee, the register in the tags view showed
wrong results. This fixes the behavior so that the memo is shown instead
of the erroneous text "*** UNASSIGNED ***"

BUG: 347685
FIXED-IN: 5.0.3